# SourceMindAI

./: README.md  pyproject.toml
app/: main.py
app/services/: documind.py  pdf_reader.py
