[project]
name = "documind-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "langchain",
    "langchain-community",
    "langchain-huggingface",
    "pinecone[grpc]",
    "rank-bm25",
    "markupsafe==2.1.5",
    "langchain-pinecone>=0.2.13",
    "torch==2.2.2",
    "numpy==1.26.4",
    "sentence-transformers==2.7.0",
    "pinecone-text>=0.11.0",
    "pypdf>=6.9.2",
    "supabase>=2.28.3",
    "langchain-experimental>=0.3.4",
    "anthropic>=0.86.0",
    "huggingface-hub>=0.36.2",
    "groq>=1.1.2",
    "youtube-transcript-api>=1.2.4",
    "python-multipart==0.0.22",
]

[tool.uv]
override-dependencies = [
    "torch==2.2.2",
    "markupsafe==2.1.5",
]
